# pet_projects

./: LICENSE  pyproject.toml  rxconfig.py
pet_projects/: pet_projects.py
pet_projects/components/: __init__.py  footer.py  navbar.py
pet_projects/config/: __init__.py  categories.py  kaomojis.py  social_links.py
pet_projects/pages/: __init__.py  about.py  index.py
pet_projects/pages/fun/: counter.py  guess_number.py
pet_projects/states/: __init__.py  counter.py
pet_projects/states/fun/: counter.py  guess_number.py
pet_projects/templates/: __init__.py  general.py  template.py
