[project]
name = "pet-projects"
version = "0.1.0"
description = "Just a simple pet projects collection created by me and a reflex framework"
authors = [
    {name = "inrezy"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "reflex (>=0.8.28.post1,<0.9.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
